--- a/style.css
+++ b/style.css
@@ -25,7 +25,16 @@ ul{
 }
 
 .logo{
-    width: 130px;
+    /* width: 130px; */
+    /* Chore App */
+    width: 25%;
+    margin-top: 0px;
+    margin-bottom: 10px;
+    font-family: 'Montserrat';
+    font-size: 1rem;
+    background: linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #eeff41, #f9a825, #ff5722);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 header{
@@ -67,9 +76,11 @@ h1, .subhead{
     margin-top: 15%;
     padding: 4em 0 2em;
     /*Below makes the top left corner of the blue container round*/
-    border-top-left-radius: 40px;
+    /* border-top-left-radius: 40px; */
+    /* Below is the Chore app code */
+    border-radius: 15%;
     /*Makes the whole blue container slanted along the y axis*/
-    transform: skewY(-2deg);
+    /* transform: skewY(-2deg); */
     z-index: 1;
 }
 .blue-container:before{
@@ -98,7 +109,7 @@ h1, .subhead{
 /*Calls the ul inside of the 'blue-container' */
 .blue-container ul{
     /*  Below aligns elements inside the blue container to be adjusted straight according to the slanted 'blue-container' */
-    transform: skewY(2deg);
+    /* transform: skewY(2deg); */
 }
 
 .blue-container ul li{
